--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "_cp_d.ts_files_deep": "copyfiles -u 1 'lib_es6/**/*.d.ts' lib",
     "cp_d.ts_files": "npm run _cp_d.ts_files_shallow && npm run _cp_d.ts_files_deep ",
     "build": "npm run build_es6 && npm run es6_to_es5 && npm run cp_d.ts_files",
-    "prepublish": "npm run clean && npm run build",
+    "prepublishaa": "npm run clean && npm run build",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "unittest": "jest --config src/__unittests__/jest_unittests.json"
   },
   "name": "reactive-pixi-js",
   "version": "0.0.1",
@@ -30,20 +31,33 @@
   "devDependencies": {
     "@kadira/react-storybook-addon-info": "^3.3.0",
     "@kadira/storybook": "^2.21.0",
+    "@types/chai": "^3.4.34",
+    "@types/jest": "^16.0.4",
     "@types/lodash": "^4.14.50",
+    "@types/node": "^7.0.4",
     "@types/pixi.js": "^4.3.1",
     "@types/react": "^15.0.0",
     "@types/react-dom": "^0.14.20",
+    "@types/sinon": "^1.16.34",
     "babel-cli": "^6.18.0",
+    "canvas": "latest",
+    "chai": "^3.5.0",
     "copyfiles": "^1.0.0",
+    "gl": "^4.0.3",
+    "jest": "latest",
+    "jest-cli": "latest",
+    "json-stringify-safe": "^5.0.1",
     "lodash": "^4.17.4",
     "pixi.js": "^4.3.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-pixi": "^0.9.5",
     "rxjs": "^5.0.3",
+    "sinon": "^1.17.7",
+    "testdouble": "^1.11.0",
     "tslint": "^4.3.1",
     "typescript": "^2.1.5",
+    "typescript-babel-jest": "latest",
     "webpack": "^1.14.0"
   },
   "dependencies": {
