implement & test renderer, add sample doc

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "clean": "rm -rf lib_es6 lib",
+    "clean": "rm -rf lib_es6 lib src/docs/webpack/*.js dist",
     "build_es6": "tsc",
     "es6_to_es5": "babel lib_es6 --out-dir lib",
     "_cp_d.ts_files_shallow": "copyfiles --up 1 'lib_es6/*.d.ts' lib",
@@ -8,6 +8,9 @@
     "cp_d.ts_files": "npm run _cp_d.ts_files_shallow && npm run _cp_d.ts_files_deep ",
     "build": "npm run build_es6 && npm run es6_to_es5 && npm run cp_d.ts_files",
     "prepublishaa": "npm run clean && npm run build",
+    "compile_doc_webpack": "tsc src/docs/webpack/build.ts",
+    "build_doc": "npm run compile_doc_webpack && webpack --config src/docs/webpack/build.js",
+    "run_doc": "npm run compile_doc_webpack && webpack-dev-server --config src/docs/webpack/build.js",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "unittest": "jest --config src/__unittests__/jest_unittests.json"
@@ -32,33 +35,56 @@
     "@kadira/react-storybook-addon-info": "^3.3.0",
     "@kadira/storybook": "^2.21.0",
     "@types/chai": "^3.4.34",
+    "@types/history": "^4.5.0",
     "@types/jest": "^16.0.4",
     "@types/lodash": "^4.14.50",
     "@types/node": "^7.0.4",
     "@types/pixi.js": "^4.3.1",
-    "@types/react": "^15.0.0",
-    "@types/react-dom": "^0.14.20",
+    "@types/react": "^15.0.4",
+    "@types/react-bootstrap": "^0.0.43",
+    "@types/react-dom": "^0.14.21",
+    "@types/react-router": "^3.0.0",
     "@types/sinon": "^1.16.34",
+    "@types/webpack": "^2.2.4",
     "babel-cli": "^6.18.0",
+    "bootstrap": "^3.3.7",
+    "brace": "^0.9.1",
     "canvas": "latest",
     "chai": "^3.5.0",
+    "console-polyfill": "^0.2.3",
     "copyfiles": "^1.0.0",
+    "css-loader": "^0.26.1",
+    "file-loader": "^0.10.0",
     "gl": "^4.0.3",
+    "history": "^4.5.1",
+    "html-webpack-plugin": "^2.28.0",
     "jest": "latest",
     "jest-cli": "latest",
     "json-stringify-safe": "^5.0.1",
     "lodash": "^4.17.4",
-    "pixi.js": "^4.3.2",
+    "monaco-editor": "^0.8.1",
+    "pixi.js": "latest",
     "react": "^15.4.2",
+    "react-ace": "^4.1.1",
+    "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.2",
+    "react-foundation": "^0.7.0",
+    "react-monaco-editor": "^0.7.3",
     "react-pixi": "^0.9.5",
+    "react-router": "^3.0.2",
     "rxjs": "^5.0.3",
+    "sass-loader": "^4.1.1",
     "sinon": "^1.17.7",
+    "static-site-generator-webpack-plugin": "^3.1.0",
+    "style-loader": "^0.13.1",
     "testdouble": "^1.11.0",
+    "ts-loader": "^2.0.0",
     "tslint": "^4.3.1",
     "typescript": "^2.1.5",
     "typescript-babel-jest": "latest",
-    "webpack": "^1.14.0"
+    "url-loader": "^0.5.7",
+    "webpack": "2.2.0",
+    "webpack-dev-server": "^1.16.2"
   },
   "dependencies": {
     "dom-css": "^2.1.0"
