--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "_cp_d.ts_files_deep": "copyfiles -u 1 'lib_es6/**/*.d.ts' lib",
     "cp_d.ts_files": "npm run _cp_d.ts_files_shallow && npm run _cp_d.ts_files_deep ",
     "build": "npm run build_es6 && npm run es6_to_es5 && npm run cp_d.ts_files",
-    "prepublishaa": "npm run clean && npm run build",
+    "prepublish": "npm run clean && npm run build",
     "compile_doc_webpack": "tsc src/docs/webpack/build.ts",
     "build_doc": "npm run compile_doc_webpack && webpack --config src/docs/webpack/build.js",
     "run_doc": "npm run compile_doc_webpack && webpack-dev-server --config src/docs/webpack/build.js",
-    "storybook": "start-storybook -p 6006",
+    "storybook": "start-storybook -p 7001",
     "build-storybook": "build-storybook",
+    "test": "npm run unittest",
     "unittest": "jest --config src/__unittests__/jest_unittests.json"
   },
   "name": "reactive-pixi-js",
@@ -20,7 +21,7 @@
   "description": "(sort-of) Reactive Pixi JS",
   "main": "lib/ReactStreamedPixi.js",
   "types": "lib/ReactStreamedPixi.d.ts",
-  "repository": "https://github.com/react-stream-libs/react-streamed-pixi.git",
+  "repository": "https://github.com/react-stream-libs/reactive-pixi.git",
   "author": "devdoomari <devdoomari __at__ gmail dotttt commmm>",
   "license": "Personal",
   "peerDependencies": {
