--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@types/jest": "^16.0.4",
     "@types/lodash": "^4.14.50",
     "@types/node": "^7.0.4",
-    "@types/pixi.js": "^4.3.1",
+    "@types/pixi.js": "latest",
     "@types/react": "^15.0.4",
     "@types/react-bootstrap": "^0.0.43",
     "@types/react-dom": "^0.14.21",
