library-usage friendlier

--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "test": "npm run unittest",
     "unittest": "jest --config src/__unittests__/jest_unittests.json"
   },
-  "name": "reactive-pixi-js",
+  "name": "reactive-pixi",
   "version": "0.0.1",
   "description": "(sort-of) Reactive Pixi JS",
-  "main": "lib/ReactStreamedPixi.js",
-  "types": "lib/ReactStreamedPixi.d.ts",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "repository": "https://github.com/react-stream-libs/reactive-pixi.git",
   "author": "devdoomari <devdoomari __at__ gmail dotttt commmm>",
   "license": "Personal",
