--- a/package.json
+++ b/package.json
@@ -28,9 +28,7 @@
     "@types/react": "^15.0.0",
     "@types/react-dom": "^0.14.20",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-pixi": "^0.9.5",
-    "rxjs": "^5.0.3"
+    "react-dom": "^15.4.2"
   },
   "devDependencies": {
     "@kadira/react-storybook-addon-info": "^3.3.0",
@@ -66,14 +64,10 @@
     "monaco-editor": "^0.8.1",
     "pixi.js": "latest",
     "react": "^15.4.2",
-    "react-ace": "^4.1.1",
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.2",
-    "react-foundation": "^0.7.0",
     "react-monaco-editor": "^0.7.3",
-    "react-pixi": "^0.9.5",
     "react-router": "^3.0.2",
-    "rxjs": "^5.0.3",
     "sass-loader": "^4.1.1",
     "sinon": "^1.17.7",
     "static-site-generator-webpack-plugin": "^3.1.0",
